<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weather</string>

    <string name="celsius">°C</string>
    <string name="hpa">hPa</string>
    <string name="percent">%</string>
    <string name="mps">mps</string>

    <string name="feels_like">Feels like:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
    <string name="latest_update">Latest update:</string>

    <string name="show_more">Show more</string>

    <string name="future_weather">Future weather</string>

</resources>