<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_14"
        android:orientation="horizontal">

        <TextView
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="11"
            android:text="@string/feels_like" />

        <TextView
            android:id="@+id/vTvTemperature"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            tools:text="+20 C" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_14"
        android:layout_marginBottom="@dimen/dp_12"
        android:orientation="horizontal">

        <TextView
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="9"
            android:text="@string/pressure" />

        <TextView
            android:id="@+id/vTvPressure"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            tools:text="700" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_14"
        android:layout_marginBottom="@dimen/dp_12"
        android:orientation="horizontal">

        <TextView
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="9"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/vTvHumidity"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            tools:text="60" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_14"
        android:layout_marginBottom="@dimen/dp_12"
        android:orientation="horizontal">

        <TextView
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="11"
            android:text="@string/wind_speed" />

        <TextView
            android:id="@+id/vTvWindSpeed"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            tools:text="100" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_14"
        android:layout_marginBottom="@dimen/dp_12"
        android:orientation="horizontal">

        <TextView
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="8"
            android:text="@string/sunrise" />

        <TextView
            android:id="@+id/vTvSunrise"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            tools:text="07:10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_14"
        android:layout_marginBottom="@dimen/dp_12"
        android:orientation="horizontal">

        <TextView
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="7"
            android:text="@string/sunset" />

        <TextView
            android:id="@+id/vTvSunset"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            tools:text="21:50" />

    </LinearLayout>

</LinearLayout>