<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/vIvItemWeatherConditionIcon"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_marginStart="@dimen/dp_14"
            android:layout_marginTop="@dimen/dp_36"
            android:layout_marginBottom="@dimen/dp_36" />

        <TextView
            android:id="@+id/vTvItemTemperature"
            style="@style/DefaultBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_14"
            android:maxLength="7"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp_20"
            tools:text="23" />

        <TextView
            style="@style/DefaultBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_4"
            android:maxLength="2"
            android:text="@string/celsius"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp_20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_14"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vTvItemDateTime"
                style="@style/FutureWeatherItemText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_4"
                android:gravity="end"
                tools:text="25.03.1918 06:00" />

            <TextView
                android:id="@+id/vTvItemWeatherDescription"
                style="@style/FutureWeatherItemText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_4"
                android:gravity="end"
                tools:text="Overcast clouds" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_4"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    style="@style/FutureWeatherItemText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="11"
                    android:text="@string/feels_like" />

                <TextView
                    android:id="@+id/vTvItemTemperatureFeelsLike"
                    style="@style/FutureWeatherItemText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    tools:text="20" />

                <TextView
                    style="@style/FutureWeatherItemText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:text="@string/celsius" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    style="@style/FutureWeatherItemText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="11"
                    android:text="@string/wind_speed" />

                <TextView
                    android:id="@+id/vTvItemWindSpeed"
                    style="@style/FutureWeatherItemText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:maxLength="4"
                    tools:text="2" />

                <TextView
                    style="@style/FutureWeatherItemText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:text="@string/mps" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue" />

</LinearLayout>